<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sravanreddy.signupdemo.SignUp">

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/firstname_textView"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstNameEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/firstname_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/middlename_TextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/middlename_TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/middlename_EditText"
        app:layout_constraintEnd_toEndOf="@+id/firstNameTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/middlename_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/middlename_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <TextView
        android:id="@+id/lastname_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/lastname_TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/lastname_EditText"
        app:layout_constraintEnd_toEndOf="@+id/middlename_TextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/lastname_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/middlename_EditText"
        app:layout_constraintTop_toBottomOf="@+id/middlename_EditText" />

    <TextView
        android:id="@+id/emailid_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/emailid_TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_EditText"
        app:layout_constraintEnd_toEndOf="@+id/lastname_TextView"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email_EditText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/emailid_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lastname_EditText"
        app:layout_constraintTop_toBottomOf="@+id/lastname_EditText" />

    <Button
        android:id="@+id/back_Button"
        android:onClick="signupClickHadler"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="68dp"
        android:text="@string/back_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sumbit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="68dp"
        android:onClick="signupClickHadler"
        android:text="@string/sumbmit_Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
